--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
@@ -72,71 +72,16 @@
 		<app-new-consultation-expansion-section id="allergies"
 			[title]="'odontologia.odontology-consultation-dock-popup.ALLERGIES' | translate" icon="highlight_off"
 			[isEmpty]="allergiesNewConsultationService.isEmpty()">
-			<app-new-document-section>
-
-				<ng-container concept-form>
-
-					<ng-container *ngIf="!allergiesNewConsultationService.getSnomedConcept() else allergiesForm">
-						<app-concepts-search *ngIf="!searchConceptsLocallyFFIsOn else allergyTypeaheadSearch"
-							[label]="'odontologia.odontology-consultation-dock-popup.ALLERGY'"
-							(search)="allergiesNewConsultationService.openSearchDialog($event)">
-						</app-concepts-search>
-
-						<ng-template #allergyTypeaheadSearch>
-							<app-concept-typeahead-search [ecl]="allergiesNewConsultationService.getECL()"
-								[placeholder]="'odontologia.odontology-consultation-dock-popup.SEARCH_ALLERGY'"
-								(conceptSelected)="allergiesNewConsultationService.setConcept($event)">
-							</app-concept-typeahead-search>
-						</ng-template>
-					</ng-container>
-
-					<ng-template #allergiesForm>
-						<form [formGroup]="allergiesNewConsultationService.getForm()"
-							(ngSubmit)="allergiesNewConsultationService.addToList()">
-							<mat-form-field appearance="outline">
-								<mat-label>
-									{{ 'odontologia.odontology-consultation-dock-popup.ALLERGY' | translate }}
-								</mat-label>
-								<input id="allergies_input" matInput type="text" formControlName="snomed" name="snomed"
-									readonly matTooltip="{{allergiesNewConsultationService.getSnomedConcept().pt }}">
-								<button id="clear_allergies" mat-button matSuffix color="warn" mat-icon-button
-									(click)="allergiesNewConsultationService.resetForm()">
-									<mat-icon>close</mat-icon>
-								</button>
-							</mat-form-field>
-
-							<mat-form-field appearance="outline">
-								<mat-label>
-									{{ 'odontologia.odontology-consultation-dock-popup.CRITICALITY' | translate }}
-								</mat-label>
-								<mat-select id="criticality_select" formControlName="criticality">
-									<mat-option *ngFor="let criticalityType of criticalityTypes"
-										[value]="criticalityType.id">
-										{{criticalityType.display}}
-									</mat-option>
-								</mat-select>
-								<mat-error translate="forms.REQUIRED"></mat-error>
-							</mat-form-field>
-
-							<div align="end">
-								<button id="submit_allergies" class="uppercase" mat-raised-button color="primary"
-									type="submit">
-									<span class="uppercase">
-										{{ 'odontologia.odontology-consultation-dock-popup.ADD_ALLERGY' | translate }}
-									</span>
-								</button>
-							</div>
-						</form>
-					</ng-template>
-				</ng-container>
-
-				<app-document-section-table data-display
-					[tableTitle]="'odontologia.odontology-consultation-dock-popup.REGISTERED_ALLERGIES'"
-					[columns]="allergiesNewConsultationService.getTableColumnConfig()"
+			<div>
+				<app-document-section-table [columns]="allergiesNewConsultationService.getTableColumnConfig()"
 					[data]="allergiesNewConsultationService.getAlergias()">
 				</app-document-section-table>
 
-			</app-new-document-section>
+				<button mat-button type="button" id="add-allergy-button" color="primary" class="add-button"
+					(click)="addAllergy()">
+					+ {{ 'odontologia.odontology-consultation-dock-popup.ADD_ALLERGY' | translate }}
+				</button>
+			</div>
 		</app-new-consultation-expansion-section>
 
 		<app-new-consultation-expansion-section id="personal_histories"
