--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
@@ -87,71 +87,17 @@
 		<app-new-consultation-expansion-section id="personal_histories"
 			[title]="'odontologia.odontology-consultation-dock-popup.PERSONAL_HISTORY' | translate" icon="report"
 			[isEmpty]="personalHistoriesNewConsultationService.isEmpty()">
-			<app-new-document-section>
-				<ng-container concept-form>
-					<ng-container
-						*ngIf="!personalHistoriesNewConsultationService.getSnomedConcept() else personalHistoriesForm">
-						<app-concepts-search *ngIf="!searchConceptsLocallyFFIsOn else personalHistoriesTypeaheadSearch"
-							[label]="'odontologia.odontology-consultation-dock-popup.PERSONAL_HISTORY'"
-							(search)="personalHistoriesNewConsultationService.openSearchDialog($event)">
-						</app-concepts-search>
-
-						<ng-template #personalHistoriesTypeaheadSearch>
-							<app-concept-typeahead-search [ecl]="personalHistoriesNewConsultationService.getECL()"
-								[placeholder]="'odontologia.odontology-consultation-dock-popup.SEARCH_PERSONAL_HISTORY'"
-								(conceptSelected)="personalHistoriesNewConsultationService.setConcept($event)">
-							</app-concept-typeahead-search>
-						</ng-template>
-					</ng-container>
-
-					<ng-template #personalHistoriesForm>
-						<form [formGroup]="personalHistoriesNewConsultationService.getForm()"
-							(ngSubmit)="personalHistoriesNewConsultationService.addToList()">
-
-							<mat-form-field appearance="outline">
-								<mat-label>
-									{{ 'odontologia.odontology-consultation-dock-popup.PROBLEM_TYPE' | translate }}
-								</mat-label>
-								<input id="personal_history_input" matInput type="text" formControlName="snomed"
-									name="snomed" readonly
-									matTooltip="{{personalHistoriesNewConsultationService.getSnomedConcept().pt }}">
-								<button id="clear_history" mat-button matSuffix color="warn" mat-icon-button
-									(click)="personalHistoriesNewConsultationService.resetForm()">
-									<mat-icon>close</mat-icon>
-								</button>
-							</mat-form-field>
-
-							<mat-form-field appearance="outline">
-								<mat-label>
-									{{ 'odontologia.odontology-consultation-dock-popup.REGISTRATION_DATE' | translate }}
-								</mat-label>
-								<input matInput id="history_date" [matDatepicker]="historyDatePicker"
-									formControlName="fecha" [min]="minDate"
-									[max]="personalHistoriesNewConsultationService.getMaxDate()">
-								<mat-datepicker-toggle matSuffix [for]="historyDatePicker"></mat-datepicker-toggle>
-								<mat-datepicker #historyDatePicker></mat-datepicker>
-							</mat-form-field>
-
-							<div align="end">
-								<button id="submit_personal_history" class="uppercase" mat-raised-button color="primary"
-									type="submit">
-									<span class="uppercase">
-										{{ 'odontologia.odontology-consultation-dock-popup.ADD_PERSONAL_HISTORY' |
-										translate }}
-									</span>
-								</button>
-							</div>
-						</form>
-					</ng-template>
-				</ng-container>
-
-				<app-document-section-table data-display
-					[tableTitle]="'odontologia.odontology-consultation-dock-popup.REGISTERED_PERSONAL_HISTORY'"
-					[columns]="personalHistoriesNewConsultationService.getTableColumnConfig()"
+			<div>
+				<app-document-section-table [columns]="personalHistoriesNewConsultationService.getTableColumnConfig()"
 					[data]="personalHistoriesNewConsultationService.getAntecedentesPersonales()">
 				</app-document-section-table>
 
-			</app-new-document-section>
+				<button mat-button type="button" id="add-allergy-button" color="primary" class="add-button"
+					(click)="addPersonalHistory()">
+					+ {{ 'odontologia.odontology-consultation-dock-popup.ADD_PERSONAL_HISTORY' | translate }}
+				</button>
+			</div>
+
 		</app-new-consultation-expansion-section>
 
 		<app-new-consultation-expansion-section id="medications"
