--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/new-consultation-medication-form/new-consultation-medication-form.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/new-consultation-medication-form/new-consultation-medication-form.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="space-between">
-    <span mat-dialog-title [translate]="'ambulatoria.paciente.nueva-consulta.medicaciones.ADD'"></span>
+    <span mat-dialog-title [translate]="'historia-clinica.new-consultation-medication-form.ADD'"></span>
     <button mat-icon-button (click)="close()">
         <mat-icon>close</mat-icon>
     </button>
@@ -8,13 +8,13 @@
 <div mat-dialog-content>
     <ng-container *ngIf="!data.medicationService.getSnomedConcept() else medicationForm">
         <app-concepts-search *ngIf="!data.searchConceptsLocallyFF else medicationTypeaheadSearch"
-            [label]="'ambulatoria.paciente.nueva-consulta.medicaciones.CONCEPT_LABEL'"
+            [label]="'historia-clinica.new-consultation-medication-form.CONCEPT_LABEL'"
             (search)="data.medicationService.openSearchDialog($event)">
         </app-concepts-search>
 
         <ng-template #medicationTypeaheadSearch>
             <app-concept-typeahead-search [ecl]="data.medicationService.getECL()"
-                [placeholder]="'ambulatoria.paciente.nueva-consulta.medicaciones.SEARCH_PLACEHOLDER'"
+                [placeholder]="'historia-clinica.new-consultation-medication-form.SEARCH_PLACEHOLDER'"
                 (conceptSelected)="data.medicationService.setConcept($event)">
             </app-concept-typeahead-search>
         </ng-template>
@@ -25,7 +25,7 @@
     <form [formGroup]="data.medicationService.getForm()" (ngSubmit)="addMedication()">
         <div fxLayout="column">
             <mat-form-field appearance="outline">
-                <mat-label [translate]="'ambulatoria.paciente.nueva-consulta.medicaciones.MEDICATION'">
+                <mat-label [translate]="'historia-clinica.new-consultation-medication-form.MEDICATION'">
                 </mat-label>
                 <input matInput type="text" formControlName="snomed" name="snomed" readonly
                     matTooltip="{{ data.medicationService.getSnomedConcept().pt }}">
@@ -36,11 +36,11 @@
             </mat-form-field>
 
             <mat-form-field appearance="outline">
-                <mat-label [translate]="'ambulatoria.paciente.nueva-consulta.medicaciones.OBSERVACIONES'">
+                <mat-label [translate]="'historia-clinica.new-consultation-medication-form.OBSERVACIONES'">
                 </mat-label>
                 <textarea matInput type="text" id="observations" name="observaciones" formControlName="observaciones"
                     placeholder="Descripción">
-            </textarea>
+                </textarea>
                 <mat-error *ngIf="hasError(data.medicationService.getForm(), 'maxlength', 'observaciones')"
                     translate="forms.MAX_LENGTH_ERROR" [translateParams]="{max: TEXT_AREA_MAX_LENGTH}">
                 </mat-error>
@@ -48,14 +48,15 @@
 
             <div class="margin-checkbox">
                 <mat-checkbox formControlName="suspendido">
-                    <span [translate]="'ambulatoria.paciente.nueva-consulta.medicaciones.SUSPENDIDO'">
+                    <span [translate]="'historia-clinica.new-consultation-medication-form.SUSPENDIDO'">
                     </span>
                 </mat-checkbox>
             </div>
 
             <div align="end">
                 <button id="add-medication-button" mat-raised-button color="primary" type="submit">
-                    <span [translate]="'ambulatoria.paciente.nueva-consulta.medicaciones.ADD'" class="uppercase"></span>
+                    <span [translate]="'historia-clinica.new-consultation-medication-form.ADD'"
+                        class="uppercase"></span>
                 </button>
             </div>
         </div>
