--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
@@ -103,77 +103,16 @@
 		<app-new-consultation-expansion-section id="medications"
 			[title]="'odontologia.odontology-consultation-dock-popup.USUAL_MEDICATION' | translate"
 			icon="event_available" [isEmpty]="medicationsNewConsultationService.isEmpty()">
-			<app-new-document-section>
-				<div concept-form>
-					<ng-container *ngIf="!medicationsNewConsultationService.getSnomedConcept() else medicationForm">
-						<app-concepts-search *ngIf="!searchConceptsLocallyFFIsOn else medicationTypeaheadSearch"
-							[label]="'odontologia.odontology-consultation-dock-popup.USUAL_MEDICATION'"
-							(search)="medicationsNewConsultationService.openSearchDialog($event)">
-						</app-concepts-search>
-
-						<ng-template #medicationTypeaheadSearch>
-							<app-concept-typeahead-search [ecl]="medicationsNewConsultationService.getECL()"
-								[placeholder]="'odontologia.odontology-consultation-dock-popup.SEARCH_USUAL_MEDICATION'"
-								(conceptSelected)="medicationsNewConsultationService.setConcept($event)">
-							</app-concept-typeahead-search>
-						</ng-template>
-					</ng-container>
-				</div>
-
-				<ng-template #medicationForm>
-					<form [formGroup]="medicationsNewConsultationService.getForm()"
-						(ngSubmit)="medicationsNewConsultationService.addToList()">
-						<mat-form-field appearance="outline">
-							<mat-label>
-								{{ 'odontologia.odontology-consultation-dock-popup.MEDICATION_NAME' | translate }}
-							</mat-label>
-							<input matInput type="text" formControlName="snomed" name="snomed" readonly
-								matTooltip="{{ medicationsNewConsultationService.getSnomedConcept().pt }}">
-							<button id="clear_medication" mat-button matSuffix color="warn" mat-icon-button
-								(click)="medicationsNewConsultationService.resetForm()">
-								<mat-icon>close</mat-icon>
-							</button>
-						</mat-form-field>
-
-						<mat-form-field appearance="outline">
-							<mat-label>
-								{{ 'odontologia.odontology-consultation-dock-popup.OBSERVATIONS' | translate }}
-							</mat-label>
-							<textarea matInput type="text" id="observations" name="observaciones"
-								formControlName="observaciones"
-								[placeholder]="'odontologia.odontology-consultation-dock-popup.DESCRIPTION' | translate">
-							</textarea>
-							<mat-error
-								*ngIf="hasError(medicationsNewConsultationService.getForm(), 'maxlength', 'observaciones')"
-								translate="forms.MAX_LENGTH_ERROR" [translateParams]="{max: TEXT_AREA_MAX_LENGTH}">
-							</mat-error>
-						</mat-form-field>
-
-						<div class="margin-checkbox">
-							<mat-checkbox formControlName="suspendido">
-								<span>
-									{{ 'odontologia.odontology-consultation-dock-popup.SUSPENDED' | translate }}
-								</span>
-							</mat-checkbox>
-						</div>
-
-						<div align="end">
-							<button class="uppercase" mat-raised-button color="primary" type="submit">
-								<span>
-									{{ 'odontologia.odontology-consultation-dock-popup.ADD_MEDICATION' | translate }}
-								</span>
-							</button>
-						</div>
-					</form>
-				</ng-template>
-
-				<app-document-section-table data-display
-					[tableTitle]="'odontologia.odontology-consultation-dock-popup.REGISTERED_MEDICATIONS'"
-					[columns]="medicationsNewConsultationService.getTableColumnConfig()"
+			<div>
+				<app-document-section-table [columns]="medicationsNewConsultationService.getTableColumnConfig()"
 					[data]="medicationsNewConsultationService.getMedicaciones()">
 				</app-document-section-table>
 
-			</app-new-document-section>
+				<button mat-button type="button" id="add-medication-button" color="primary" class="add-button"
+					(click)="addMedication()">
+					+ {{ 'odontologia.odontology-consultation-dock-popup.ADD_MEDICATION' | translate }}
+				</button>
+			</div>
 		</app-new-consultation-expansion-section>
 
 		<app-new-consultation-expansion-section id="diagnoses"
