--- a/front-end/apps/projects/hospital/src/styles.scss
+++ b/front-end/apps/projects/hospital/src/styles.scss
@@ -55,11 +55,12 @@ section {
 
 @media (max-width: $mobile-popups) {
 	div.cdk-global-overlay-wrapper div.cdk-overlay-pane {
-		width: 100% !important;
+		width: calc(100% - 220px) !important;
 
 		&.dock-popup-overlay.maximized {
 			max-height: 100vh !important;
 			height: 100vh !important;
+			width: 100% !important;
 		}
 	}
 }
