tg-7844 [FE] Cambios de CR

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/general-nursing-record/general-nursing-record.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/general-nursing-record/general-nursing-record.component.html
@@ -1,7 +1,5 @@
 <div class="margin">
-    <div *ngIf="nursingSections.length">
-        <app-nursing-record
-            [nursingRecords]="[{title: 'indicacion.nursing-care.sections.TITLE_GENERAL', record: nursingSections}]">
-        </app-nursing-record>
-    </div>
+    <app-nursing-record
+        [nursingSections]="[{title: 'indicacion.nursing-care.sections.TITLE_GENERAL', records: nursingRecords}]">
+    </app-nursing-record>
 </div>
