--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/nursing-care/nursing-care.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/nursing-care/nursing-care.component.html
@@ -2,13 +2,12 @@
 	<h2 [translate]="'indicacion.nursing-care.TITLE'"></h2>
 	<app-summary-card id="nursing-care" [header]="title">
 	    <app-day-display id="visualization-days" [minDate]="entryDate" (actualDateEmmiter)="loadActualDateAndFilter($event)"></app-day-display>
-        <section id="sections" *ngIf="generalNursingRecords.length || specificNursingRecords.length else noInfo">
-            <app-general-nursing-record [nursingRecords]="generalNursingRecords"></app-general-nursing-record>
-            <app-specific-nursing-record [nursingRecords]="specificNursingRecords"></app-specific-nursing-record>
+        <section>
+            <app-general-nursing-record id="general-section" *ngIf="generalNursingRecords.length" [nursingRecordsDto]="generalNursingRecords"></app-general-nursing-record>
+            <app-specific-nursing-record id="specific-section" *ngIf="specificNursingRecords.length" [nursingRecordsDto]="specificNursingRecords"></app-specific-nursing-record>
         </section>
+        <div *ngIf="!generalNursingRecords.length && !specificNursingRecords.length">
+            <app-no-data></app-no-data>
+        </div>
 	</app-summary-card>
 </app-content>
-
-<ng-template #noInfo>
-    <app-no-data></app-no-data>
-</ng-template>
