--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/specific-nursing-record/specific-nursing-record.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/specific-nursing-record/specific-nursing-record.component.html
@@ -1,5 +1,3 @@
 <div class="margin">
-    <div *ngIf="nursingSections.length">
-        <app-nursing-record [nursingRecords]="nursingSections"></app-nursing-record>
-    </div>
+    <app-nursing-record [nursingSections]="nursingSections"></app-nursing-record>
 </div>
