tg-7842 [P1] Se puede editar y eliminar documentos de episodio de internacion cerrado

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/components/internment-episode-summary/internment-episode-summary.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/components/internment-episode-summary/internment-episode-summary.component.html
@@ -19,7 +19,7 @@
 		</div>
 	</mat-list-item>
 	<div fxLayout="row">
-		<div *ngIf="patientDocuments.hasAnamnesis && !physicalDischargeDate && currentUserIsAllowToDoAPhysicalDischarge">
+		<div *ngIf="patientDocuments.hasAnamnesis && !physicalDischargeDate && currentUserIsAllowToDoAPhysicalDischarge && !hasAdministrativeDischarge">
 			<button mat-flat-button color="primary" id="physical-discharge" (click)="physicalDischarge()">
 				<span class="uppercase" [translate]="'internaciones.discharge.PHYSICAL_DISCHARGE'"></span>
 			</button>
