--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
@@ -24,7 +24,7 @@
 							{{params.appointmentData.patient.identificationNumber | number:'3.0-0'}}
 						</span>
 					</div>
-					<button type="button" mat-icon-button color="primary"
+					<a type="button" mat-icon-button color="primary"
 						*appHasRole="['ESPECIALISTA_MEDICO','PROFESIONAL_DE_SALUD','ENFERMERO', 'ESPECIALISTA_EN_ODONTOLOGIA']"
 						[routerLink]="'/institucion/' + institutionId + '/ambulatoria/paciente/' + params.appointmentData?.patient?.id"
 						(click)="closeDialog()">
@@ -32,7 +32,7 @@
 							{{'turnos.appointment.BUTTON_CLINICAL_HISTORY' | translate}}
 						</span>
 						<mat-icon color="primary">open_in_new</mat-icon>
-					</button>
+					</a>
 				</div>
 			</div>
 
