tg-7861 La especialidad de la agenda debe ser editable

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda-setup/agenda-setup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda-setup/agenda-setup.component.html
@@ -29,8 +29,7 @@
 					<mat-form-field appearance="outline">
 						<mat-select id="healthcareProfessionalSpecialtyId" name="healthcareProfessionalSpecialtyId"
 									formControlName="healthcareProfessionalSpecialtyId"
-									placeholder="{{'pacientes.form.SELECT' | translate}}"
-									[disabled]="!form.value.healthcareProfessionalId">
+									placeholder="{{'pacientes.form.SELECT' | translate}}">
 							<mat-option *ngFor="let specialty of professionalSpecialties" [value]="specialty.id">
 								<span class="mat-body">{{ specialty.name }}</span>
 							</mat-option>
