--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/label/label.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/label/label.component.html
@@ -1,4 +1,4 @@
 <ng-container *ngIf="label">
-	<span  [hidden]="collapsed" *ngIf="label.key" [translate]="label.key"></span>
+	<span *ngIf="label.key" [translate]="label.key"></span>
 	<span *ngIf="label.text">{{label.text}}</span>
 </ng-container>
