--- a/front-end/apps/projects/hospital/src/app/modules/institucion/routes/home/home.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/institucion/routes/home/home.component.html
@@ -4,8 +4,11 @@
 			<mat-card-title>{{institucion.name}}</mat-card-title>
 			<mat-card-subtitle>{{address(institucion)}}</mat-card-subtitle>
 		</mat-card-header>
-		<mat-card-content>
-		</mat-card-content>
+		<div fxLayout="row" fxLayoutGap="5px" class="roles">
+			<div *ngFor="let role of roles; let i = index">
+				<span *ngIf="i > 0"> |</span> {{role}}
+			</div>
+		</div>
 		<mat-card-actions>
 			<button mat-button color="primary" (click)="switchInstitution()">CAMBIAR DE INSTITUCIÓN</button>
 		</mat-card-actions>
