--- a/front-end/apps/projects/hospital/src/app/modules/auth/components/update-password/update-password.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/auth/components/update-password/update-password.component.html
@@ -14,8 +14,9 @@
 					<mat-form-field [floatLabel]="'never'" appearance="outline">
 						<mat-label>Contraseña actual</mat-label>
 						<input formControlName="password"
-							   type="password"
+							   [type]="hidePassword ? 'password' : 'text'"
 							   matInput>
+						<mat-icon matSuffix color="primary" (click)="hidePassword = !hidePassword">{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
 					</mat-form-field>
 				<div class="api-error" *ngIf="!!apiError">
 					<span>Contraseña incorrecta</span>
@@ -23,19 +24,11 @@
 					<mat-form-field [floatLabel]="'never'" appearance="outline">
 						<mat-label>Nueva contraseña</mat-label>
 						<input formControlName="newPassword"
-							   type="password"
+							   [type]="hideNewPassword ? 'password' : 'text'"
 							   matInput>
+						<mat-icon matSuffix color="primary" (click)="hideNewPassword = !hideNewPassword">{{hideNewPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
 						<mat-error>
 							<span>Debe contener un mínimo de 8 caracteres, y al menos 1 mayúscula, 1 mínuscula y 1 número</span>
-						</mat-error>
-					</mat-form-field>
-					<mat-form-field [floatLabel]="'never'" appearance="outline">
-						<mat-label>Repetir nueva contraseña</mat-label>
-						<input formControlName="reNewPassword"
-							   type="password"
-							   matInput>
-						<mat-error *ngIf="this.form.controls['reNewPassword']?.errors">
-							<span>{{matchingError}}</span>
 						</mat-error>
 					</mat-form-field>
 			</mat-card-content>
