--- a/front-end/apps/projects/hospital/src/app/modules/turnos/components/date-range-time-form/date-range-time-form.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/components/date-range-time-form/date-range-time-form.component.scss
@@ -1,11 +1,11 @@
-.dateSelector {
+.date-selector {
 	width: 150px;
 }
 
-.hour_selector {
+.hour-selector {
 	width: 100px;
 }
 
-.block_dialog {
+.block-dialog {
 	width: 400px;
 }
